syntax = "proto3";
package chat;
option go_package = "chat/proto";

service ChatService {
  // Replace the two separate methods with a single bidirectional stream
  rpc Chat(stream ClientMessage) returns (stream ServerMessage);
}

message ClientMessage {
  oneof message {
    JoinRoom join = 1;
    ChatMessage chat = 2;
  }
}

message ServerMessage {
  oneof message {
    JoinResponse join_response = 1;
    ChatMessage chat = 2;
    Error error = 3;
  }
}

message JoinRoom {
  string room_name = 1;
  string access_code = 2;
  string user_name = 3;
}

message JoinResponse {
  bool success = 1;
  repeated ChatMessage history = 2;
}

message ChatMessage {
  string room_name = 1;
  string user_name = 2;
  string content = 3;
  string timestamp = 4;
}

message Error {
  string message = 1;
}
